api: add ability for assignee to manage their own assigned machines with the keyword 'self'
